product description, product images pt1

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -109,7 +109,7 @@
 "Location" : "موقع",
 "Created at" : "تاريخ الانشاء",
 "Actions" : "إجراءات",
-"Upload new image" : "صورة جديدة",
+"New image" : "صورة جديدة",
 "Reset" : "استعادة",
 "Send" : "ارسال",
 "Success" : "نجاج",
@@ -155,6 +155,7 @@
 "Unit price" : "سعر الوحدة",
 "Pack price" : "سعر الحزمة",
 "Pack units" : "عدد الوحدات في الحزمة",
+"pack" : "حزمة",
 "Not selected" : "غير محدد",
 "Discount percentage" : "نسبة التخفيض",
 "Start date" : "تاريخ البدأ",
