--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,9 @@
 {
-  "privacy_policy" : "Privacy policy",
-  "about" : "About",
-  "success" : "Opeation completed successfully"
+  "privacy_policy": "Privacy policy",
+  "about": "About",
+  "success": "Opeation completed successfully",
+  "video_dropzone_note": "Only one file allowed max size 2gb",
+  "images_dropzone_note": "Max 15 files allowed",
+  "video_dropzone_message": "Drop video here or click to chose file",
+  "images_dropzone_message*": "Drop images here or click to chose files"
 }
