settings api, add sometimes.auth middleware, change product in_cart logic, discounts page pt1

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -74,7 +74,14 @@
 "Users" : "المستخدمون",
 "Browse users" : "تصفح المستخدمين",
 "Users table" : "جدول المستخدمين",
-
+"Coupon" : "القسيمة",
+"Coupons" : "القسائم",
+"Browse coupons" : "تصفح القسائم",
+"Add coupon" : "إضافة قسيمة",
+"Edit coupon" : "تعديل القسيمة",
+"Coupons table" : "جدول القسائم",
+"Code" : "الرمز",
+"Max uses" : "الحد الأقصى لعدد الاستخدامات",
 "Notice" : "إعلام",
 "Notices" : "الإعلامات",
 "Browse notices" : "تصفح الإعلامات",
