dashbpard reorganization and fixes

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -7,6 +7,7 @@
 "Remove from Homepage" : "إزالة من الواجهة",
 "Yes" : "نعم",
 "No" : "لا",
+"Discounts table" : "جدول التخفيضات",
 "Add discount" : "إضافة تخفيض",
 "Edit discount" : "تعديل التخفيض",
 "Delete discount" : "حذف التخفيض",
@@ -82,14 +83,14 @@
 "Coupons table" : "جدول القسائم",
 "Code" : "الرمز",
 "Max uses" : "الحد الأقصى لعدد الاستخدامات",
-"Notice" : "إعلام",
-"Notices" : "الإعلامات",
-"Browse notices" : "تصفح الإعلامات",
-"Notices table" : "جدول الإعلامات",
-"Add notice" : "إضافة إعلام",
-"Notice type" : "نوع الإعلام",
-"Offer Notice" : "إعلام بالعرض",
-"Update Notice" : "إعلام بالتحديث",
+"Notice" : "إشعار",
+"Notices" : "الإشعارات",
+"Browse notices" : "تصفح الإشعارات",
+"Notices table" : "جدول الإشعارات",
+"Add notice" : "إضافة إشعار",
+"Notice type" : "نوع الإشعار",
+"Offer Notice" : "إشعار بالعرض",
+"Update Notice" : "إشعار بالتحديث",
 "Other" : "أخرى",
 "Title":"العنوان",
 "Title in arabic":"العنوان بالعربية",
@@ -157,6 +158,7 @@
 "Not discounted" : "غير مخفض",
 "in_discount" : "مخفض حاليا",
 "discount" : "التخفيض",
+"Description" : "الوصف",
 "Unit name" : "اسم الوحدة",
 "Pack name" : "اسم الحزمة",
 "Unit price" : "سعر الوحدة",
@@ -219,8 +221,8 @@
 "Administration" : "الإدارة",
 "Admin":"المسؤول",
 "Settings":"الاعدادات",
-
-"Documentation" : "معلومات",
+"System settings" : "إعدادات النظام",
+"Documentation" : "السياسات و الشروط",
 "privacy_policy" : "سياسة الخصوصية",
 "about" : "حول التطبيق",
 "Privacy policy" : "سياسة الخصوصية",
@@ -276,6 +278,7 @@
 "Images": "الصور",
 "Videos of": "مقاطع فيديو عن",
 "Images of": "صور عن",
+"Discounts of": "تخفيضات",
 "Add video": "إضافة فيديو",
 "Add images": "إضافة صور",
 "Close": "إغلاق",
