hide/unhide sections, add groups

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -83,6 +83,13 @@
 "Coupons table" : "جدول القسائم",
 "Code" : "الرمز",
 "Max uses" : "الحد الأقصى لعدد الاستخدامات",
+"Group": "المجموعة",
+"group": "مجموعة",
+"Groups": "المجموعات",
+"Browse groups": "تصفح المجموعات",
+"Add Group": "إضافة مجموعة",
+"Groups table": "جدول المجموعات",
+"Add/update group": "إضافة/تحديث مجموعة",
 "Notice" : "إشعار",
 "Notices" : "الإشعارات",
 "Browse notices" : "تصفح الإشعارات",
@@ -99,13 +106,18 @@
 "Content in english":"المحتوى بالانجليزية",
 "Select type" : "حدد النوع",
 "View" : "عرض",
-
+"Show" : "إظهار",
+"Hide" : "إخفاء",
+"Hidden" : "مخفي",
+"Shown" : "ظاهر",
 "Ad" : "إعلان",
 "Ads" : "الإعلانات",
 "Browse ads" : "تصفح الإعلانات",
 "Ads table" : "جدول الإعلانات",
 "Add ad" : "إضافة إعلان",
-
+"Product ad" : "إعلان عن منتج",
+"Off-App ad" : "إعلان خارج التطبيق",
+"URL" : "الرابط",
 "Discount amount" :"قيمة التخفيض",
 "Fixed" :"مبلغ ثابت",
 "Percentage" :"نسبة مئوية",
