add chargily callback, add invoice service

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -255,6 +255,7 @@
 "Piece":"القطعة",
 "100 gram":"100 غرام",
 "1 kilogram":"1 كيلوغرام",
+"Dzd" : "دج",
 
 "order_id" : "رقم الطلب",
 "order_date" : "تاريخ الطلب",
@@ -266,6 +267,14 @@
 "date" : "التاريخ",
 "Seller" : "البائع",
 "Buyer" : "المشتري",
+"Date" : "التاريخ",
+"Buyer Information" : "معلومات المشتري",
+"Seller Information" : "معلومات البائع",
+"Subtotal" : "المجموع الفرعي",
+"Purchase Total" : "مجموع المشتريات",
+"Tax Total" : "سعر التوصيل",
+"Discount Total" : "مجموع التخفيضات",
+"Total Amount" : "المجموع الكلي",
 "description" : "الوصف",
 "units" : "الوحدة",
 "quantity" : "الكمية",
