new web routes, new menus and view per role, locations, units, change distance and delivery calaculation logic, add delivery point to region, add whatsapp to orders, reorganize product modal, fix sections

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -225,7 +225,7 @@
   "iOS": "iOS",
   "iOS version": "نسخة الأيفون",
   "Administration": "الإدارة",
-  "Admin": "المسؤول",
+  "Admin": "مسؤول عام",
   "Settings": "الاعدادات",
   "System settings": "إعدادات النظام",
   "Documentation": "السياسات و الشروط",
@@ -362,5 +362,56 @@
   "Confirm deletion": "تأكيد الحذف",
   "Delete Your Account on Fresh Dz": "حذف حسابك على تطبيق fresh Dz",
   "Fresh Dz is committed to protecting your private data in accordance with the": "تلتزم fresh Dz بحماية بياناتك الخاصة وفقًا لـ",
-  "mentioned in our application. We are currently explaining to you how to permanently delete your account from our database through the application.": "المذكورة في تطبيقنا. نقوم حاليًا بشرح كيفية حذف حسابك بشكل نهائي  من قاعدة البيانات الخاصة بنا من خلال التطبيق."
+  "mentioned in our application. We are currently explaining to you how to permanently delete your account from our database through the application.": "المذكورة في تطبيقنا. نقوم حاليًا بشرح كيفية حذف حسابك بشكل نهائي  من قاعدة البيانات الخاصة بنا من خلال التطبيق.",
+
+  "Account": "الحساب",
+    "Account Settings": "إعدادات الحساب",
+    "Profile Details": "تفاصيل الملف الشخصي",
+    "user avatar": "صورة المستخدم",
+    "Upload new photo": "تحميل صورة جديدة",
+    "Allowed JPG, GIF or PNG. Max size of 800K": "يسمح بصيغ JPG و GIF و PNG. الحد الأقصى للحجم 800K",
+    "E-mail": "البريد الإلكتروني",
+    "Save changes": "حفظ التغييرات",
+    "Change Password": "تغيير كلمة المرور",
+    "Current Password": "كلمة المرور الحالية",
+    "New Password": "كلمة المرور الجديدة",
+    "Confirm New Password": "تأكيد كلمة المرور الجديدة",
+    "Delete Account": "حذف الحساب",
+    "Are you sure you want to delete your account?": "هل أنت متأكد من رغبتك في حذف حسابك؟",
+    "Once you delete your account, there is no going back. Please be certain.": "بمجرد حذف حسابك، لا يمكن التراجع عن ذلك. يرجى التأكد.",
+    "I confirm my account deletion": "أؤكد حذف حسابي",
+    "Ok": "موافق",
+    "Profile updated successfully": "تم تحديث الملف الشخصي بنجاح",
+    "Password changed successfully": "تم تغيير كلمة المرور بنجاح",
+    "Please confirm account deactivation by checking the checkbox": "يرجى تأكيد إلغاء تنشيط الحساب عن طريق تحديد مربع الاختيار",
+    "Are you sure you want to delete your account? This action cannot be undone.": "هل أنت متأكد من رغبتك في حذف حسابك؟ لا يمكن التراجع عن هذا الإجراء.",
+    "Account deleted successfully": "تم حذف الحساب بنجاح",
+
+    "Admins": "المشرفون",
+    "Browse admins": "تصفح المشرفين",
+    "Add admin": "إضافة مشرف",
+    "Admins table": "جدول المشرفين",
+    "Role": "الدور",
+    "Create New Admin": "إنشاء مشرف جديد",
+    "Select Role": "اختر الدور",
+    "Super Admin": "مدير النظام",
+    "Data Entry": "مدخل بيانات",
+    "Region Manager": "مدير منطقة",
+    "Accountant": "محاسب",
+    "Marketer": "مسوق",
+    "Select Region": "اختر المنطقة",
+    "Stock Manager": "مدير المخزون",
+"Analytics": "الإحصائيات",
+    "Unit": "وحدة",
+    "Units": "الوحدات",
+    "Browse units": "تصفح الوحدات",
+    "Add unit": "إضافة وحدة",
+    "Units Table": "جدول الوحدات",
+    "Delivery Settings": "إعدادات التوصيل",
+    "Price Per Kilometer": "السعر لكل كيلومتر",
+    "Free Delivery Threshold": "حد التوصيل المجاني",
+    "Minimum Delivery Price": "الحد الأدنى لسعر التوصيل",
+    "Maximum Delivery Price": "الحد الأقصى لسعر التوصيل",
+    "Delivery Point": "نقطة التوصيل",
+    "Select Delivery Point": "اختر نقطة التوصيل"
 }
