new invoice template, static ads

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -117,6 +117,7 @@
   "Add ad": "إضافة إعلان",
   "Product ad": "إعلان عن منتج",
   "Off-App ad": "إعلان خارج التطبيق",
+  "Static ad": "إعلان ثابت",
   "URL": "الرابط",
   "Discount amount": "قيمة التخفيض",
   "Fixed": "مبلغ ثابت",
