revert to old invoice, add order distance

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -248,6 +248,7 @@
   "100 gram": "100 غرام",
   "1 kilogram": "1 كيلوغرام",
   "Dzd": "دج",
+  "Km" : "كلم",
   "order_id": "رقم الطلب",
   "order_date": "تاريخ الطلب",
   "buyer_name": "اسم المشتري",
