--- a/lang/ar.json
+++ b/lang/ar.json
@@ -428,5 +428,6 @@
     "Enable Cash Payment": "تفعيل الدفع نقداً",
     "Enable Baridi Mob": "تفعيل بريدي موب",
     "Enable CCP": "CCP تفعيل",
-    "Enable Chargily": "تفعيل Chargily"
+    "Enable Chargily": "تفعيل Chargily",
+    "Distance" : "مسافة التوصيل"
 }
