add delivery time to order list

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -429,5 +429,6 @@
     "Enable Baridi Mob": "تفعيل بريدي موب",
     "Enable CCP": "CCP تفعيل",
     "Enable Chargily": "تفعيل Chargily",
-    "Distance" : "مسافة التوصيل"
+    "Distance" : "مسافة التوصيل",
+    "Delivery Time" : "وقت الاستلام"
 }
