add translation to various models

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -38,36 +38,43 @@
   "Categories": "الفئات",
   "Browse categories": "تصفح الفئات",
   "Add category": "إضافة فئة",
+  "Edit category": "تعديل الفئة",
   "Categories table": "جدول الفئات",
   "Number of categories must be 4 or 6": "عدد الفئات يجب أن يكون 4 أو 6",
   "Subcategories": "الأصناف",
   "Browse subcategories": "تصفح الأصناف",
-  "Add Subcategory": "إضافة صنف",
+  "Add subcategory": "إضافة صنف",
+  "Edit subcategory": "تعديل الصنف",
   "Subcategories table": "جدول الأصناف",
   "driver" : "سائق",
   "Driver": "السائق",
   "Drivers": "السائقون",
   "Browse drivers": "تصفح السائقين",
   "Add driver": "إضافة سائق",
+    "Edit driver": "تعديل السائق",
   "Drivers table": "جدول السائقين",
   "Families": "العائلات",
   "Browse families": "تصفح العائلات",
-  "Add Family": "إضافة عائلة",
+  "Add family": "إضافة عائلة",
+    "Edit family": "تعديل العائلة",
   "Families table": "جدول العائلات",
   "Offers": "العروض",
   "Browse offers": "تصفح العروض",
-  "Add Offer": "إضافة عرض",
+  "Add offer": "إضافة عرض",
+    "Edit offer": "تعديل العرض",
   "Offers table": "جدول العروض",
   "Orders": "الطلبات",
   "Order": "الطلب",
   "Browse orders": "تصفح الطلبات",
   "Orders table": "جدول الطلبات",
   "Items": "المشتريات",
-  "Add item": "إضافة",
+  "Add item": "إضافة عنصر",
+    "Edit item": "تعديل العنصر",
   "Items table": "جدول المشتريات",
   "Products": "المنتجات",
   "Browse products": "تصفح المنتجات",
-  "Add Product": "إضافة منتج",
+  "Add product": "إضافة منتج",
+  "Edit product": "تعديل المنتج",
   "Products table": "جدول المنتجات",
   "Sections": "العناصر",
   "Homepage sections": "عناصر الواجهة الأمامية",
@@ -88,7 +95,8 @@
   "group": "مجموعة",
   "Groups": "المجموعات",
   "Browse groups": "تصفح المجموعات",
-  "Add Group": "إضافة مجموعة",
+  "Add group": "إضافة مجموعة",
+  "Edit group": "تعديل المجموعة",
   "Groups table": "جدول المجموعات",
   "Add/update group": "إضافة/تحديث مجموعة",
   "Notice": "إشعار",
@@ -96,6 +104,7 @@
   "Browse notices": "تصفح الإشعارات",
   "Notices table": "جدول الإشعارات",
   "Add notice": "إضافة إشعار",
+  "Edit notice": "تعديل الإشعار",
   "Notice type": "نوع الإشعار",
   "Offer Notice": "إشعار بالعرض",
   "Update Notice": "إشعار بالتحديث",
@@ -103,8 +112,13 @@
   "Title": "العنوان",
   "Title in arabic": "العنوان بالعربية",
   "Title in english": "العنوان بالانجليزية",
+  "Title in french": "العنوان بالفرنسية",
   "Content in arabic": "المحتوى بالعربية",
   "Content in english": "المحتوى بالانجليزية",
+  "Content in french": "المحتوى بالفرنسية",
+  "Name in Arabic": "الاسم بالعربية",
+  "Name in English": "الاسم بالإنجليزية",
+  "Name in French": "الاسم بالفرنسية",
   "Select type": "حدد النوع",
   "View": "عرض",
   "Show": "إظهار",
@@ -116,6 +130,7 @@
   "Browse ads": "تصفح الإعلانات",
   "Ads table": "جدول الإعلانات",
   "Add ad": "إضافة إعلان",
+  "Edit ad": "تعديل الإعلان",
   "Product ad": "إعلان عن منتج",
   "Off-App ad": "إعلان خارج التطبيق",
   "Static ad": "إعلان ثابت",
@@ -313,6 +328,7 @@
   "Regions table": "جدول المناطق",
   "Browse regions": "تصفح المناطق",
   "Add region": "إضافة منطقة",
+  "Edit region": "تعديل المنطقة",
   "Region info": "معلومات المنطقة",
   "Clear Points": "مسح النقاط",
   "Region name": "اسم المنطقة",
@@ -337,7 +353,9 @@
   "Images of": "صور عن",
   "Discounts of": "تخفيضات",
   "Add video": "إضافة فيديو",
+  "Edit video": "تعديل فيديو",
   "Add images": "إضافة صور",
+  "Edit images": "تعديل الصور",
   "Close": "إغلاق",
   "Url": "الرابط",
   "Image": "الصورة",
@@ -395,6 +413,7 @@
     "Admins": "المشرفون",
     "Browse admins": "تصفح المشرفين",
     "Add admin": "إضافة مشرف",
+    "Edit admin": "تعديل المشرف",
     "Admins table": "جدول المشرفين",
     "Role": "الدور",
     "Create New Admin": "إنشاء مشرف جديد",
@@ -411,7 +430,8 @@
     "Units": "الوحدات",
     "Browse units": "تصفح الوحدات",
     "Add unit": "إضافة وحدة",
-    "Units Table": "جدول الوحدات",
+    "Edit unit": "تعديل الوحدة",
+    "Units table": "جدول الوحدات",
     "Delivery Settings": "إعدادات التوصيل",
     "Price Per Kilometer": "السعر لكل كيلومتر",
     "Free Delivery Threshold": "حد التوصيل المجاني",
@@ -432,5 +452,10 @@
     "Enable Chargily": "تفعيل Chargily",
     "Distance" : "مسافة التوصيل",
     "Delivery Time" : "وقت الاستلام",
-    "Identifier" : "رقم الطلب"
+    "Identifier" : "رقم الطلب",
+    "Region filter" : "حسب المنطقة",
+    "Info" : "معلومات",
+    "Note" : "ملاحظة",
+    "whatsapp" : "واتساب",
+    "Notice content" : "محتوى الإشعار"
 }
